--- a/src/app/pages/goty/goty.component.html
+++ b/src/app/pages/goty/goty.component.html
@@ -1,8 +1,8 @@
 <h2>Vote for the Game of the year</h2>
 <hr>
 
-<div class="row row-cols-1 row-cols-md-4 g-4">
-  <div class="col" *ngFor="let game of games$ | async">
+<div class="row row-cols-1 row-cols-md-4 g-4" *ngIf="games$ | async as games; else loading">
+  <div class="col" *ngFor="let game of games">
     <div class="card bg-dark">
       <img [src]="game.url" class="card-img-top" [alt]="game.name">
       <div class="card-body">
@@ -21,3 +21,11 @@
     </div>
   </div>
 </div>
+
+<ng-template #loading>
+  <div class="d-flex justify-content-center mt-5">
+    <div class="spinner-border text-primary" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
+</ng-template>
