--- a/src/app/components/horizontal-bar-graphic/horizontal-bar-graphic.component.html
+++ b/src/app/components/horizontal-bar-graphic/horizontal-bar-graphic.component.html
@@ -13,4 +13,5 @@
     (select)="onSelect($event)"
     style="fill: gray;">
   </ngx-charts-bar-horizontal>
+  <p><small>* Results are shown instantly, try voting from another tab and check how results are updated at that moment.</small></p>
 </div>
